--- a/bash/.bash_cfg/bash_aliases.cfg
+++ b/bash/.bash_cfg/bash_aliases.cfg
@@ -1,11 +1,11 @@
 # User specific aliases and functions
 alias l='ls -CF'
-alias ll="ls -l --block-size=\'1 --color=auto"
-#alias ll='ls -alF'
+alias ls="ls"
+alias ll="ls -l"
 alias la='ls -A'
-alias rm='rm -i'
-alias cp='cp -i'
-alias mv='mv -i'
+#alias rm='rm -i'
+#alias cp='cp -i'
+#alias mv='mv -i'
 alias h='history'
 alias ..='cd ..'
 alias ...='cd ../..'
@@ -13,8 +13,8 @@ alias ....='cd ../../..'
 alias push='pushd'
 alias pop='popd'
 alias memused="free | grep Mem | awk '{print \$3/\$2 * 100.0}'"
-#alias nuke-it-from-orbit='rm -rf  $(ls -a | grep -v "^\.*$") && git init'
-alias formatjson='pbpaste | python -m json.tool | pbcopy'
+#alias nuke-it-from-orbit='rm -rf  $(ls -a | grep -v "^\.*$") && git init'
+#alias formatjson='pbpaste | python -m json.tool | pbcopy'
 alias cleanHistory="h | awk '{\$1=\"\"; print}'"
 
 # Working Notes
